stealth (4.00.00)

  * Stealth 4.00.00 uses Unix Domain Sockets instead of signals to
    communicatie with the stealth monitor running as a daemon.

  * Previously required absolute file paths are no longer required. When
    relative file paths are used with the Stealth daemon or with Stealth doing
    an integrity scan as foreground process they are interpreted relatively to
    the current working directory, or (when specified in the policy file)
    relative to the USE BASE location. With Stealth running in IPC mode
    relative file paths are interpreted relative to the directory in which
    Stealth running in IPC mode was started.
 
  * A README.flow file is provided with several separately provided 
    illustrative images in the directory documentation/images. Similarly:
    README.messages describes the organization of log/mail message handling.

  * Specifications for the logrotate specifications should use 'copytruncate'
    and 'sharedscripts' (see the man-page for an example).

  * share/usr/bin/stealthcron now specifies a Unix Domain Socket (usage not
    changed).

  * Fixed compilation errors that emerged with g++-5, reported by Matthias
    Klose. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 07 Feb 2015 21:14:30 +0100

stealth (3.00.00)

  * Version 3.00.00 completely reorganizes and refactors Stealth's
    components. Long functions were split into shorter ones and several new
    classes were defined, resulting in better compartmentalization of
    tasks. 

  * At the program's logical flow level continuation and related flow control
    was re-implemented, using, e.g., Bobcat's FBB::Signal class to handle
    signals. Also, wait facilities based on sleep(3) selector(3bobcat) were
    replaced by C++11 facilities using mutexes and condition variables.

  * Stealth's cross-refeence information is added to the source archive,
    installed by default in EXTRA/stealth.xref.gz (cf. INSTALL.im for the
    actual EXTRA location.
