@@ -1,3 +1,3 @@
 #define AUTHOR  "Frank B. Brokken (f.b.brokken@rug.nl)";
-#define VERSION "4.00.00"
+#define VERSION "4.01.00"
 #define YEARS   "2005-2015"
