@@ -36,6 +36,11 @@ current working directory.
         Specify once to see the numbered commands;nl()
         twice to see the policy file parsing steps as well.nl()
         Results are written to the std. output.
+    it() tt(--ping <uds>): (C) performs no actions, but is used to verify that
+        a s() daemon can be reached via its Unix Domain Socket
+        (tt(<uds>)). The daemon will respond even if it's currently performing
+        an integrity scan. It is used by the tt(/usr/bin/stealthcron) script
+        to verify that a s() daemon is alive.
     it() tt(--random-interval (-i) <interval>[m]>): start the scan a random
         interval of <interval> seconds (or minutes if an `m' is appended (no
         blanks) to <interval>) following the delay specified at tt(--repeat)
