@@ -1,0 +1,6 @@
+#include "stealth.ih"
+
+string Stealth::pingRequest()
+{
+    return "nop";
+}
